--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header {
 button {
   padding: 16px 24px;
   border-radius: 8px;
-  border: 1px solid #8b5cf6;
+  border: 1px solid #ff4500;
   background-color: transparent;
   color: white;
   display: flex;
@@ -90,8 +90,8 @@ input {
 }
 
 input:checked {
-  background: #8b5cf6;
-  border: 2px solid #a78bfa;
+  background: #ff4500;
+  border: 2px solid #27272a;
 }
 
 @media (max-width: 570px) {
